--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="./1-times.html">Timer</a></li>
+      <li><a href="./1-timer.html">Timer</a></li>
       <li><a href="./2-snackbar.html">Snackbar</a></li>
     </ul>
   </body>
